--- a/portfolio/03_fog.html
+++ b/portfolio/03_fog.html
@@ -64,7 +64,7 @@
             Project <strong>Fog</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">3D Graphics</p>
-        <img src="../img/portfolio_thumbnails/03_fog.jpg" alt="a picture of this portfolio item" class="intro__img">
+        <img src="../img/portfolio_thumbnails/03_fog.png" alt="a picture of this portfolio item" class="intro__img">
     </section>
 
     <div class="portfolio-item-individual">
