--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <img src="img/portfolio_thumbnails/06_value.png" alt="" class="portfolio__img" />
             </a>
             <a href="portfolio/07_gradient.html" class="portfolio__item">
-                <img src="img/portfolio_thumbnails/07_gradient.jpg" alt="" class="portfolio__img" />
+                <img src="img/portfolio_thumbnails/07_gradient.png" alt="" class="portfolio__img" />
             </a>
 
         </div>
